fixed faq summary alignment for mobile resolutions

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -49,6 +49,9 @@
 .justify{
   text-align: justify !important;
 }
+.al-left{
+  text-align: left !important;
+}
 
 summary {list-style: none}
 summary::-webkit-details-marker {display: none; }
